# xvada

./: .gitignore  README.md  bubble.py  compute_T.pyx  config.py  demo.py  eval.py  grammar.py  group.py  label_llm.py  learn.py  oracle.py  parse_tree.py  raw_result.xlsx  readme.md  replacement_utils.py  run.sh  run_experiments.sh  search.py  setup.py  start.py  token_expansion.py
crucio/: Dockerfile  SimpleLark.lark  compute_T.c  consts.py  eval.py  infer.py  monitor.py  readme.md  requirements.txt  token.py
crucio/crucio/: config.py
crucio/crucio/data_types/: disjoint_set.py  grammar.py  learn_teach.py  lexical.py
crucio/crucio/dataset/: dataload.py
crucio/crucio/grammar_tool/: __init__.py  extract_con_sub.py
crucio/crucio/inference/: build_dm.py  tree.py
crucio/crucio/instantiate/: symbol_ins.py
crucio/crucio/oracle/: __init__.py  string.py
crucio/crucio/utils/: __init__.py  frame.py  global_bar.py  key_listen.py  log.py  object_manage.py  statistics.py  subseq.py
crucio/data_types/: __init__.py  grammar.py  interval_example.py
crucio/data_types/distribution/: compress.py
crucio/data_types/graph/: __init__.py  directed_graph.py
crucio/evaluate/: evaluate_mutate.py  mutate_examples.py
crucio/grammar_tool/: Parser.py
crucio/inference/: infer.py  util.py
crucio/instantiate/: token_ins.py
crucio/oracle/: string.py  tokenized.py
crucio/utils/: dfa.py  interval.py  load_grammar.py  sub_con.py  time_out.py
experiments/liquid/: parse_liquid
experiments/rust/antlr4/: CMakeCache.txt  CMakeLists.txt  RustLexer.h  RustParser.g4  RustParser.h  cmake_install.cmake  file_parser
grammar_compare/: README.md  golden_vs_xvada_best_matches.csv  golden_vs_xvada_pairwise_similarity.csv  golden_vs_xvada_summary.csv  grammar_compare.py
grammar_compare/data/: golden_grammar.g4  xmllog.g4  xvada_grammar.g4
subjects/cpp/: parse_cpp
subjects/cpp/antlr4/: CMakeCache.txt  CMakeLists.txt  CPP14Lexer.h  CPP14Parser.cpp  CPP14Parser.g4  CPP14Parser.h  CPP14Parser.interp
subjects/java/: parse_java
subjects/java/antlr4/: CMakeLists.txt  JavaLexer.cpp  Makefile  cmake_install.cmake  file_parser.cpp
subjects/liquid/: parse_liquid.py
subjects/minic/: parse_minic
subjects/tiny/: parse_tiny
(+7432 files in other folders)
